Fix: aligned footer with page content

--- a/src/stylesheets/components/_footer-internal.scss
+++ b/src/stylesheets/components/_footer-internal.scss
@@ -1,6 +1,10 @@
 .footer-internal {
     display: flex;
     flex-direction: column;
+
+    @media(min-width: $screen-lg) {
+        margin: 0 3rem;
+    }
 }
 
 .footer-internal__wrapper {
